<resources>
    <string name="app_name">Calculator2</string>
    <string name="key_1">1</string>
    <string name="key_2">2</string>
    <string name="key_3">3</string>
    <string name="key_4">4</string>
    <string name="key_5">5</string>
    <string name="key_6">6</string>
    <string name="key_7">7</string>
    <string name="key_8">8</string>
    <string name="key_9">9</string>
    <string name="key_0">0</string>
    <string name="key_dot">.</string>
    <string name="key_multiple">X</string>
    <string name="key_divided">/</string>
    <string name="key_plus">+</string>
    <string name="key_minus">-</string>
    <string name="key_equals">=</string>
    <string name="key_backspace">⌫</string>
    <string name="key_clear">C</string>
    <string name="key_reset">Res</string>
    <string name="key_theme">Custom</string>
    <string name="key_theme_def">Def</string>
</resources>