<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/count_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text=""
        android:textSize="@dimen/text_size"
        style="@style/CustomStileBtnText"
        app:layout_constraintTop_toTopOf="parent" />


    <Button
        android:id="@+id/key_1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/key_1"
        app:layout_constraintEnd_toStartOf="@+id/key_2"
        app:layout_constraintStart_toStartOf="parent"
        style="@style/CustomStileBtn"
        app:layout_constraintTop_toBottomOf="@id/count_text" />

    <Button
        android:id="@+id/key_2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/key_2"
        app:layout_constraintEnd_toStartOf="@+id/key_3"
        app:layout_constraintStart_toEndOf="@id/key_1"
        style="@style/CustomStileBtn"
        app:layout_constraintTop_toBottomOf="@id/count_text" />

    <Button
        android:id="@+id/key_3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/key_3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/key_2"
        style="@style/CustomStileBtn"
        app:layout_constraintTop_toBottomOf="@id/count_text" />

    <Button
        android:id="@+id/key_4"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/key_4"
        app:layout_constraintEnd_toEndOf="@id/key_1"
        app:layout_constraintStart_toStartOf="parent"
        style="@style/CustomStileBtn"
        app:layout_constraintTop_toBottomOf="@id/key_1" />

    <Button
        android:id="@+id/key_5"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/key_5"
        app:layout_constraintEnd_toStartOf="@id/key_6"
        app:layout_constraintStart_toEndOf="@id/key_4"
        style="@style/CustomStileBtn"
        app:layout_constraintTop_toBottomOf="@id/key_1" />

    <Button
        android:id="@+id/key_6"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/key_6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/key_5"
        style="@style/CustomStileBtn"
        app:layout_constraintTop_toBottomOf="@id/key_1" />

    <Button
        android:id="@+id/key_7"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/key_7"
        app:layout_constraintEnd_toStartOf="@+id/key_8"
        app:layout_constraintStart_toStartOf="parent"
        style="@style/CustomStileBtn"
        app:layout_constraintTop_toBottomOf="@id/key_4" />

    <Button
        android:id="@+id/key_8"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/key_8"
        app:layout_constraintEnd_toStartOf="@+id/key_9"
        app:layout_constraintStart_toEndOf="@id/key_1"
        style="@style/CustomStileBtn"
        app:layout_constraintTop_toBottomOf="@id/key_5" />

    <Button
        android:id="@+id/key_9"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/key_9"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/key_2"
        style="@style/CustomStileBtn"
        app:layout_constraintTop_toBottomOf="@id/key_6" />

    <Button
        android:id="@+id/key_plus"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/key_plus"
        app:layout_constraintTop_toBottomOf="@id/key_7"
        app:layout_constraintStart_toStartOf="parent"
        style="@style/CustomStileBtn"
        app:layout_constraintEnd_toStartOf="@id/key_minus"/>

    <Button
        android:id="@+id/key_minus"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/key_minus"
        app:layout_constraintTop_toBottomOf="@id/key_7"
        app:layout_constraintStart_toEndOf="@id/key_plus"
        style="@style/CustomStileBtn"
        app:layout_constraintEnd_toStartOf="@id/key_divided"/>

    <Button
        android:id="@+id/key_divided"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/key_divided"
        app:layout_constraintTop_toBottomOf="@id/key_7"
        app:layout_constraintStart_toEndOf="@id/key_minus"
        style="@style/CustomStileBtn"
        app:layout_constraintEnd_toStartOf="@id/key_multiple"/>

    <Button
        android:id="@+id/key_multiple"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/key_multiple"
        app:layout_constraintTop_toBottomOf="@id/key_7"
        app:layout_constraintStart_toEndOf="@id/key_divided"
        style="@style/CustomStileBtn"
        app:layout_constraintEnd_toEndOf="parent"/>

    <Button
        android:id="@+id/key_0"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/key_0"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        style="@style/CustomStileBtn"
        app:layout_constraintTop_toBottomOf="@id/key_plus" />

    <Button
        android:id="@+id/key_equals"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/key_equals"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        style="@style/CustomStileBtn"
        app:layout_constraintTop_toBottomOf="@id/key_0" />

    <Button
        android:id="@+id/key_reset"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/key_reset"
        app:layout_constraintEnd_toEndOf="@id/key_7"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/key_equals"
        style="@style/CustomStileBtn"
        android:shadowColor="@android:color/holo_red_light"/>

    <Button
        android:id="@+id/key_change_theme_cust"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/key_theme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/key_reset"
        android:shadowColor="@android:color/holo_red_light"/>

    <Button
        android:id="@+id/key_change_theme_def"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/key_theme_def"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/key_change_theme_cust"
        android:shadowColor="@android:color/holo_red_light"/>


</androidx.constraintlayout.widget.ConstraintLayout>